
+ Changed mapping error in profile for ZIBO 737-800 (CC 11 -> DH)
+ Changed license from MIT to AGPL
+ Improved column widths in messages window
+ Fixed mapping error in ZIBO example (many thanks to daan_vb for pointing them out)
+ Implemented new feature to use sublayers for even more possible mappings

-----------------------------------------------------------------------------------------------------------------------
  VERSION 0.50
-----------------------------------------------------------------------------------------------------------------------

+ Reduced plugin size for the Microsoft Windows platform
+ Corrected spelling error in A321 example
+ Corrected encoder example of XMidiCtrl.toml file for the Behringer X-Touch Mini
+ Enabled multiple mappings for the same control change
+ Enhanced the general logging
+ Enhanced mapping options for sliders (up, middle, down)
+ Added midi outbound messages
+ Added settings window
+ Added messages window
+ Added aircraft profile window
+ Improved documentation
+ Added comprehensive example for the ZIBO 737-800

-----------------------------------------------------------------------------------------------------------------------
  VERSION 0.03
-----------------------------------------------------------------------------------------------------------------------

Breaking Changes:
+ Changed parameter names portOut and portIn to port_out and port_in. Please update your config files
+ Changed extension of profiles from cfg to toml (e.g. xmidictrl.toml)
+ Changed parameter names command_up_fast and command_down_fast to command_fast_up and command_fast_down (for Encoders)

-----------------------------------------------------------------------------------------------------------------------
  VERSION 0.02
-----------------------------------------------------------------------------------------------------------------------

+ First initial release