@@ -91,6 +91,7 @@ const char *const CFG_KEY_SL = "sl";
 const char *const CFG_KEY_SL_DATAREF = "sl_dataref";
 const char *const CFG_KEY_TITLE = "title";
 const char *const CFG_KEY_TYPE = "type";
+const char *const CFG_KEY_VALUES = "values";
 const char *const CFG_KEY_VALUE_ON = "value_on";
 const char *const CFG_KEY_VALUE_OFF = "value_off";
 const char *const CFG_KEY_VERSION = "version";
