@@ -50,59 +50,58 @@ map_type map_in_drf::type()
 };
 
 
-/**
- * Set the dataref
- */
-void map_in_drf::set_dataref(std::string_view dataref)
-{
-    m_dataref = dataref;
-}
+///**
+// * Set the dataref
+// */
+//void map_in_drf::set_dataref(std::string_view dataref)
+//{
+//    m_dataref = dataref;
+//}
 
 
-/**
- * Return the dataref
- */
-std::string_view map_in_drf::dataref() const
-{
-    return m_dataref;
-}
-
-
-/**
- * Set value on
- */
-void map_in_drf::set_value_on(std::string_view value_on)
-{
-    m_value_on = value_on;
-}
-
-
-/**
- * Return value on
- */
-std::string_view map_in_drf::value_on() const
-{
-    return m_value_on;
-}
-
-
-/**
- * Set value off
- */
-void map_in_drf::set_value_off(std::string_view value_off)
-{
-    m_value_off = value_off;
-}
-
-
-/**
- * Return value off
- */
-std::string_view map_in_drf::value_off() const
-{
-    return m_value_off;
-}
-
+///**
+// * Return the dataref
+// */
+//std::string_view map_in_drf::dataref() const
+//{
+//    return m_dataref;
+//}
+//
+//
+///**
+// * Set value on
+// */
+//void map_in_drf::set_value_on(std::string_view value_on)
+//{
+//    m_value_on = value_on;
+//}
+//
+//
+///**
+// * Return value on
+// */
+//std::string_view map_in_drf::value_on() const
+//{
+//    return m_value_on;
+//}
+//
+//
+///**
+// * Set value off
+// */
+//void map_in_drf::set_value_off(std::string_view value_off)
+//{
+//    m_value_off = value_off;
+//}
+//
+//
+///**
+// * Return value off
+// */
+//std::string_view map_in_drf::value_off() const
+//{
+//    return m_value_off;
+//}
 
 
 /**
@@ -114,13 +113,21 @@ void map_in_drf::read_config(toml::value &settings)
     map::read_config(settings);
 
     // read dataref
-    set_dataref(utils::toml_read_string(settings, CFG_KEY_DATAREF));
+    m_dataref = utils::toml_read_string(settings, CFG_KEY_DATAREF);
 
-    // read value on
-    set_value_on(utils::toml_read_string(settings, CFG_KEY_VALUE_ON));
+    // check if a values array has been defined
+    m_values = utils::toml_read_string_array(settings, CFG_KEY_VALUES, false);
 
-    // read value off
-    set_value_off(utils::toml_read_string(settings, CFG_KEY_VALUE_OFF, false));
+    if (m_values.empty()) {
+        // read value on
+        m_value_on = utils::toml_read_string(settings, CFG_KEY_VALUE_ON);
+
+        // read value off
+        m_value_off = utils::toml_read_string(settings, CFG_KEY_VALUE_OFF);
+    } else {
+        m_value_on.clear();
+        m_value_off.clear();
+    }
 }
 
 
@@ -135,7 +142,7 @@ bool map_in_drf::check()
     if (m_dataref.empty())
         return false;
 
-    if (m_value_on.empty() && m_value_off.empty())
+    if (m_values.empty() && (m_value_on.empty() && m_value_off.empty()))
         return false;
 
     return true;
@@ -152,7 +159,32 @@ bool map_in_drf::execute(midi_message &msg, std::string_view sl_value)
 
     LOG_DEBUG << " --> Change dataref '" << m_dataref << "'" << LOG_END
 
-    m_xp->datarefs().toggle(m_dataref, m_value_on, m_value_off);
+    if (m_values.empty()) {
+        m_xp->datarefs().toggle(m_dataref, m_value_on, m_value_off);
+    } else {
+        // get current value
+        std::string value;
+        m_xp->datarefs().read(m_dataref, value);
+
+        // search for the value in the values list
+        auto it = std::find(m_values.begin(), m_values.end(), value);
+
+        if (it != m_values.end()) {
+            int idx = static_cast<int>(std::distance(m_values.begin(), it));
+
+            if (idx < m_values.size() - 1)
+                idx++;
+            else
+                idx = 0;
+
+            value = m_values[idx];
+        } else {
+            // values not found, let's take the first one of the list
+            value = m_values[0];
+        }
+
+        m_xp->datarefs().write(m_dataref, value);
+    }
 
     return true;
 }
